删除FastFluidIngredient